update health check